# Dause

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  animatedbutton.cpp  animatedbutton.h  app.qrc  dauseterminal.cpp  dauseterminal.h  ffmpegaudioanalyzer.cpp  ffmpegaudioanalyzer.h  ffmpegsubtitleanalyzer.cpp  ffmpegsubtitleanalyzer.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  marqueelabel.cpp  marqueelabel.h  mediawindow.cpp  mediawindow.h  roundedimagelabel.cpp  roundedimagelabel.h  seekslider.cpp  seekslider.h  spectrumwidget.cpp  spectrumwidget.h  videolayerwidget.cpp  videolayerwidget.h
colors/: Dause.colorscheme
